samples/_failures_safe/1761553570_420381_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_308dbe02.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_308dbe02.c:183:12: error: missing terminating " character
  183 |     printf("Token count
      |            ^~~~~~~~~~~~
./samples/SAFE/__tmp_308dbe02.c:183:5: error: expected expression at end of input
  183 |     printf("Token count
      |     ^~~~~~
./samples/SAFE/__tmp_308dbe02.c:183:5: error: expected declaration or statement at end of input
